k8s/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web-client
  name: web-client
spec:
  ports:
    - name: "4173"
      port: 4173
      targetPort: 4173
  selector:
    io.kompose.service: web-client
status:
  loadBalancer: {}
